fix weird empty lesson bug on mobile (teachers with no lessons), smaller settingspanel

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,7 @@
   min-height: 100vh;
   
   display: grid;
-  grid-template-columns: 324px auto;
+  grid-template-columns: 280px auto;
 }
 .App-medium {
   width: 100vw;
@@ -16,7 +16,8 @@
 }
 .App-mobile {
   width: 100vw;
-  min-height: 100vw;
+  min-height: 100vh;
+  background-color: #EFF0F0;
   /* height: 100vh; */
   display: flex;
   flex-flow: column nowrap;
